--- a/task-a/index.html
+++ b/task-a/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>My First Page</title>
+  <title>First page</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    p {
+      font-size: large;
+      color: maroon;
+      font-weight: bold;
+    }
+  </style>
 </head>
 
 <body>
-  <h1>Welcome!</h1>
-  <p>This is a static HTML page.</p>
+  <h1>Hello Web</h1>
+  <p>This is my first web page!</p>
+  <a href="https://minesweeper.online">Minesweeper</a>
 </body>
 
 </html>
