--- a/task-b/index.html
+++ b/task-b/index.html
@@ -1,6 +1,6 @@
 <!--
 Author: Rebecka Skog
-Date: 
+Date: 21-09-2025
 -->
 
 <!DOCTYPE html>
@@ -19,8 +19,8 @@ Date:
         <li>Watching movies</li>
         <li>Going on walks</li>
     </ul>
-    <a> link</a>
-    <h2>My goals for this course</h2>
+    <a href="https://www.formula1.com">F1</a>
+    <h2>My Goals for This Course</h2>
     <ol>
         <li>Learn how to make websites from scratch.</li>
         <li>Learn how to make good websites.</li>
