--- a/task-d/index.html
+++ b/task-d/index.html
@@ -14,11 +14,11 @@ Date: 08-10-2025
     <h1 id="header"> Games I like to play</h1> 
 
     <div class="list"> 
-    <ul>
-        <li> Minesweeper</li>
-        <li> Solitare</li>
-        <li> Crosswords</li>
-    </ul>
+        <ul>
+            <li> Minesweeper</li>
+            <li> Solitare</li>
+            <li> Crosswords</li>
+        </ul>
     </div>
 
     <div class="cursive"> 
@@ -28,5 +28,16 @@ Date: 08-10-2025
     
     <a href="https://sudoku.com" target="_blank">Sudoku</a>
     <a href="https://www.nytimes.com/games/pips" target="_blank">Pips</a>
+
+    <h3>Games I like to play on PS</h3>
+    <section class="computer">
+        <ol>
+            <li>Little big planet</li>
+            <li>Minecraft</li>
+            <li>Ratchet & Clank</li>
+        </ol>
+    </section>
+    <img src="minecraft.jpeg" alt="Minecraft">
+    <p>This picture is from Pixabay. Author: MiM326</p>
 
 </body>
